--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,7 +124,13 @@
   <data name="spaceMissiles_013" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Sprites X2\Missiles\spaceMissiles_013.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="spaceMissiles_015" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sprites X2\Missiles\spaceMissiles_015.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="spaceShips_001" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Sprites X2\Ships\spaceShips_001.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="spaceShips_004" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sprites X2\Ships\spaceShips_004.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
