--- a/UlearnGame/Properties/Resources.resx
+++ b/UlearnGame/Properties/Resources.resx
@@ -136,4 +136,7 @@
   <data name="spaceShips_004" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Sprites X2\Ships\spaceShips_004.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="spaceShips_006" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Sprites X2\Ships\spaceShips_006.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
